WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229186
RTCRtpTransceiver does not need an ice transport
https://bugs.webkit.org/show_bug.cgi?id=229186
Summary
RTCRtpTransceiver does not need an ice transport
youenn fablet
Reported
2021-08-17 05:18:55 PDT
RTCRtpTransceiver does not need an ice transport
Attachments
Patch
(5.20 KB, patch)
2021-08-17 06:08 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.19 KB, patch)
2021-08-19 00:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-08-17 06:08:10 PDT
Created
attachment 435682
[details]
Patch
Eric Carlson
Comment 2
2021-08-17 08:58:44 PDT
Comment on
attachment 435682
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435682&action=review
> Source/WebCore/ChangeLog:8 > + No chnage of behavior, we are removing a member from RTCRtpTransceiver which is unused.
s/chnage/change/
youenn fablet
Comment 3
2021-08-19 00:11:47 PDT
Created
attachment 435848
[details]
Patch for landing
EWS
Comment 4
2021-08-19 01:22:31 PDT
Committed
r281226
(
240663@main
): <
https://commits.webkit.org/240663@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435848
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-08-19 01:23:17 PDT
<
rdar://problem/82114830
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug