RTCRtpTransceiver does not need an ice transport https://bugs.webkit.org/show_bug.cgi?id=229186

Reviewed by Eric Carlson.

No change of behavior, we are removing a member from RTCRtpTransceiver which is unused.
We are also updating RTCIceTransport as it does not need to have virtual methods yet.

* Modules/mediastream/RTCIceTransport.cpp:
(WebCore::RTCIceTransport::~RTCIceTransport):
* Modules/mediastream/RTCIceTransport.h:
* Modules/mediastream/RTCIceTransport.idl:
* Modules/mediastream/RTCRtpTransceiver.cpp:
(WebCore::RTCRtpTransceiver::RTCRtpTransceiver):
* Modules/mediastream/RTCRtpTransceiver.h:


Canonical link: https://commits.webkit.org/240663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281226 268f45cc-cd09-0410-ab3c-d52691b4dbfc