Source/WebCore/Modules/mediastream/RTCIceTransport.h
@@ -41,14 +41,14 @@
 
 namespace WebCore {
 
-class RTCIceTransport final : public RefCounted<RTCIceTransport>, public ScriptWrappable {
+class RTCIceTransport : public RefCounted<RTCIceTransport>, public ScriptWrappable {
     WTF_MAKE_ISO_ALLOCATED(RTCIceTransport);
 public:
     static Ref<RTCIceTransport> create()
     {
         return adoptRef(*new RTCIceTransport());
     }
-    virtual ~RTCIceTransport() = default;
+    ~RTCIceTransport();
 
     RTCIceTransportState state() const { return m_transportState; }
     void setState(RTCIceTransportState state) { m_transportState = state; }
