Source/WebCore/Modules/mediastream/RTCRtpTransceiver.h
@@ -33,7 +33,6 @@
 
 #if ENABLE(WEB_RTC)
 
-#include "RTCIceTransport.h"
 #include "RTCRtpReceiver.h"
 #include "RTCRtpSender.h"
 #include "RTCRtpTransceiverBackend.h"
@@ -70,11 +69,6 @@ public:
     ExceptionOr<void> stop();
     ExceptionOr<void> setCodecPreferences(const Vector<RTCRtpCodecCapability>&);
 
-    // FIXME: Temporary solution to keep track of ICE states for this transceiver. Later, each
-    // sender and receiver will have up to two DTLS transports, which in turn will have an ICE
-    // transport each.
-    RTCIceTransport& iceTransport() { return m_iceTransport.get(); }
-
     RTCRtpTransceiverBackend* backend() { return m_backend.get(); }
     void setConnection(RTCPeerConnection&);
 
@@ -88,7 +82,6 @@ private:
 
     bool m_stopped { false };
 
-    Ref<RTCIceTransport> m_iceTransport;
     std::unique_ptr<RTCRtpTransceiverBackend> m_backend;
     WeakPtr<RTCPeerConnection> m_connection;
 };
